--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.19.2",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "moment": "^2.29.1",
     "mongoose": "^6.2.6"
   }
 }
