--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/ThiagoPaz1/calendario-de-tarefas#readme",
   "dependencies": {
     "body-parser": "^1.19.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "moment": "^2.29.1",
